--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -116,8 +116,8 @@
 			<!-- contact info -->
 			<div class="contact-info">
 				<ul class="list-unstyled list-inline">
-					<li class="list-inline-item"><span class="ti-mobile align-middle"></span>+91 6380216429</li>
-					<li class="list-inline-item"><span class="ti-email align-middle"></span>rajeshsundarjr10@gmail.com</li>
+					<li class="list-inline-item"><span class="fa fa-mobile align-middle"></span>+91 6380216429</li>
+					<li class="list-inline-item"><span class="fa fa-envelope align-middle"></span>rajeshsundarjr10@gmail.com</li>
 				</ul>
 			</div>
 			<div class="container-fluid">
@@ -198,141 +198,7 @@
 					</div>
 
 					<div class="spacer" data-height="90"></div>
-
-					<!-- section title -->
-					<span class="title-badge"><i class="ti-medall"></i>Achievements</span>
-					<h2 class="section-title">Fun Facts</h2>
-
-					<div class="spacer" data-height="50"></div>
 					
-					<div class="row">
-						
-						<div class="col-md-4">
-							<!-- fact item -->
-							<div class="fact-item bg-white d-flex align-items-center">
-								<span class="icon ti-package data-color" data-color="#5848B4"></span>
-								<div class="details">
-									<h3 class="mb-0 mt-0 number"><em class="count">205</em></h3>
-									<p class="mb-0">Projects finished</p>
-								</div>
-							</div>
-							<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-						</div>
-
-						<div class="col-md-4">
-							<!-- fact item -->
-							<div class="fact-item bg-white d-flex align-items-center">
-								<span class="icon ti-face-smile data-color" data-color="#FF6525"></span>
-								<div class="details">
-									<h3 class="mb-0 mt-0 number"><em class="count">567</em></h3>
-									<p class="mb-0">Happy customers</p>
-								</div>
-							</div>
-							<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-						</div>
-
-						<div class="col-md-4">
-							<!-- fact item -->
-							<div class="fact-item bg-white d-flex align-items-center">
-								<span class="icon ti-gift data-color" data-color="#FF3366"></span>
-								<div class="details">
-									<h3 class="mb-0 mt-0 number"><em class="count">59</em></h3>
-									<p class="mb-0">Awards winner</p>
-								</div>
-							</div>
-							<div class="spacer d-md-none d-lg-none" data-height="30"></div>
-						</div>
-
-					</div>
-
-					<div class="spacer" data-height="90"></div>
-					<!-- section title -->
-					<span class="title-badge"><i class="ti-pie-chart"></i>What can I do?</span>
-					<h2 class="section-title">My Skills</h2>
-
-					<div class="spacer" data-height="50"></div>
-
-					<div class="row">
-						<div class="col-md-6">
-							<!-- skill item -->
-							<div class="skill-item">
-								<div class="skill-info clearfix">
-									<h4 class="float-start">WordPress</h4>
-									<span class="float-end">85%</span>
-								</div>
-								<div class="progress">
-									<div class="progress-bar data-bg-color" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="85" data-width="85" data-bg-color="#FF93AF">
-									</div>
-								</div>
-								<div class="spacer" data-height="50"></div>
-							</div>
-
-							<!-- skill item -->
-							<div class="skill-item">
-								<div class="skill-info clearfix">
-									<h4 class="float-start">HTML</h4>
-									<span class="float-end">70%</span>
-								</div>
-								<div class="progress">
-									<div class="progress-bar data-bg-color" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="70" data-width="70" data-bg-color="#FFAD8B">
-									</div>
-								</div>
-								<div class="spacer" data-height="50"></div>
-							</div>
-
-							<!-- skill item -->
-							<div class="skill-item">
-								<div class="skill-info clearfix">
-									<h4 class="float-start">Adobe XD</h4>
-									<span class="float-end">95%</span>
-								</div>
-								<div class="progress">
-									<div class="progress-bar data-bg-color" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="95" data-width="95" data-bg-color="#8CD4A1">
-									</div>
-								</div>
-								<div class="spacer d-md-none d-lg-none" data-height="50"></div>
-							</div>
-						</div>
-						<div class="col-md-6">
-							<!-- skill item -->
-							<div class="skill-item">
-								<div class="skill-info clearfix">
-									<h4 class="float-start">PHP</h4>
-									<span class="float-end">90%</span>
-								</div>
-								<div class="progress">
-									<div class="progress-bar data-bg-color" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="90" data-width="90" data-bg-color="#A192F7">
-									</div>
-								</div>
-								<div class="spacer" data-height="50"></div>
-							</div>
-
-							<!-- skill item -->
-							<div class="skill-item">
-								<div class="skill-info clearfix">
-									<h4 class="float-start">CSS</h4>
-									<span class="float-end">80%</span>
-								</div>
-								<div class="progress">
-									<div class="progress-bar data-bg-color" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="80" data-width="80" data-bg-color="#86EDFF">
-									</div>
-								</div>
-								<div class="spacer" data-height="50"></div>
-							</div>
-
-							<!-- skill item -->
-							<div class="skill-item">
-								<div class="skill-info clearfix">
-									<h4 class="float-start">jQuery</h4>
-									<span class="float-end">65%</span>
-								</div>
-								<div class="progress">
-									<div class="progress-bar data-bg-color" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="65" data-width="65" data-bg-color="#FFD164">
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
 
 				</div>
 
@@ -359,7 +225,7 @@
 							<div class="service-box bg-white">
 								<img src="images/icon-html.png" alt="html">
 								<h4>HTML</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="mb-0">Having strong Knowledge in HTML </p>
 							</div>
 						</div>
 
@@ -369,7 +235,7 @@
 								<!-- <i class="ti-palette data-color data-bg-color" data-color="#FF6525" data-bg-color="#FFD9C9"></i> -->
 								<img src="images/icon-css3.png" alt="css">
 								<h4>Css</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="mb-0">Having Strong Knowledge in CSS</p>
 							</div>
 						</div>
 
@@ -379,7 +245,7 @@
 								<!-- <i class="ti-palette data-color data-bg-color" data-color="#FF6525" data-bg-color="#FFD9C9"></i> -->
 								<img src="images/icon-javascript.png" alt="JS">
 								<h4>Js</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="mb-0">Hands-on in JavaScript and JQUERY.</p>
 							</div>
 						</div>
 
@@ -388,16 +254,7 @@
 							<div class="service-box bg-white">
 								<img src="images/icon-typescript.png" alt="TS">
 								<h4>Typescript</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4">
-							<!-- service box -->
-							<div class="service-box bg-white">
-								<img src="images/icon-python.png" alt="python">
-								<h4>Python</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="mb-0">Experienced in Type declartion in TypeScrript</p>
 							</div>
 						</div>
 
@@ -406,7 +263,7 @@
 							<div class="service-box bg-white">
 								<img src="images/icon-angularjs.png" alt="angular">
 								<h4>Angular</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="mb-0">Hands-on Experience in Angular 12+.</p>
 							</div>
 						</div>
 
@@ -415,7 +272,7 @@
 							<div class="service-box bg-white">
 								<img src="images/iconnodejs.png" alt="nodejs">
 								<h4>Nodejs</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="mb-0">Having basic CRUD operation Knowledge in NodeJS.</p>
 							</div>
 						</div>
 
@@ -424,7 +281,7 @@
 							<div class="service-box bg-white">
 								<img src="images/icon-mongodb.png" alt="mongodb">
 								<h4>Mongo DB</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="mb-0">Having basic CRUD operation Knowledge in MongoDB.</p>
 							</div>
 						</div>
 
@@ -433,25 +290,7 @@
 							<div class="service-box bg-white">
 								<img src="images/icon-sql.png" alt="sql">
 								<h4>SQL - Postgres</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4">
-							<!-- service box -->
-							<div class="service-box bg-white">
-								<img src="images/icon-react.png" alt="react">
-								<h4>React</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4">
-							<!-- service box -->
-							<div class="service-box bg-white">
-								<img src="images/icon-django.png" alt="django">
-								<h4>Django</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+								<p class="mb-0">Having basic CRUD operation  Knowledge in MYSQL.</p>
 							</div>
 						</div>
 
@@ -483,7 +322,7 @@
 							<div class="resume-item bg-white rounded">
 								<span class="time data-color data-border-color" data-color="#FF6525" data-border-color="#FF6525">2022 - Present</span>
 								<h4 class="title">Turning Point HR Solutions</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
+								<p class="mb-0">I am here as a Full-Stack developer of (MEAN). and we are are working on Transporation and services as a own Product EtuckNow</p>
 							</div>
 						</div>
 
@@ -491,44 +330,8 @@
 							<!-- resume item -->
 							<div class="resume-item bg-white rounded">
 								<span class="time data-color data-border-color" data-color="#49C16C" data-border-color="#49C16C">2020 - 2022</span>
-								<h4 class="title">Dhawrco co-working space and IT services</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
-							</div>
-						</div>
-
-						<div class="col-md-6">
-							<!-- resume item -->
-							<div class="resume-item bg-white rounded">
-								<span class="time data-color data-border-color" data-color="#33C2DB" data-border-color="#33C2DB">2019 - 2020</span>
-								<h4 class="title">Diploma in Co-operative Management</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
-							</div>
-						</div>
-
-						<div class="col-md-6">
-							<!-- resume item -->
-							<div class="resume-item bg-white rounded">
-								<span class="time data-color data-border-color" data-color="#FF3366" data-border-color="#FF3366">2014 - 2018</span>
-								<h4 class="title">Bachelor’s Degree</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
-							</div>
-						</div>
-
-						<div class="col-md-6">
-							<!-- resume item -->
-							<div class="resume-item bg-white rounded">
-								<span class="time data-color data-border-color" data-color="#5848B4" data-border-color="#5848B4">2012 - 2014</span>
-								<h4 class="title">HR SEC School</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
-							</div>
-						</div>
-
-						<div class="col-md-6">
-							<!-- resume item -->
-							<div class="resume-item bg-white rounded">
-								<span class="time data-color data-border-color" data-color="#FFB300" data-border-color="#FFB300">2011 - 2012</span>
-								<h4 class="title">SSLC</h4>
-								<p class="mb-0">Lorem ipsum dolor sit amet consectetur adipiscing elit praesent placerat ultrices metus sed luctus.</p>
+								<h4 class="title">Dhawrco Business Center (P) Ltd.</h4>
+								<p class="mb-0">Working in a Various Projects like HRA Management and Ecommerce Applications.Implemented Lot of Ideas in UI/UX.</p>
 							</div>
 						</div>
 
@@ -570,7 +373,7 @@
 						<div class="col-md-4">
 							<!-- contact info item -->
 							<div class="contact-item bg-white d-flex align-items-center">
-								<span class="icon fa fa-email data-color data-bg-color" data-color="#FF6525" data-bg-color="#FFD9C9"></span>
+								<span class="icon fa fa-envelope data-color data-bg-color" data-color="#FF6525" data-bg-color="#FFD9C9"></span>
 								<div class="details">
 									<h3 class="mb-0 mt-0">E-Mail</h3>
 									<p class="mb-0">rajeshsundarjr10@gmail.com</p>
